--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,6 +6,13 @@ body {
   padding: 0;
 }
 
+h1, .h1{font-size: 2.92rem;}
+h2, .h2{font-size: 2.60rem;}
+h3, .h3{font-size: 2.28rem;}
+h4, .h4{font-size: 1.64rem;}
+h5, .h5{font-size: 1.32rem;}
+h6, .h6{font-size: 1.00rem;}
+
 #app {
   position: relative;
   height: 100%;
@@ -184,6 +191,14 @@ Switch
   padding: 6px 6px 5px 6px;
   border-radius: 4px;
   cursor: pointer;
+}
+
+label {
+  color: #797676;
+}
+
+.dark-mode label {
+  color: #E9E9E9;
 }
 
 body.IE7 .Switch {
